<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="?attr/actionModeCopyDrawable"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_important"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_important" />
    </group>
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_todo_factory" />
    </group>
</menu>